Updating footer spacing, updating menu items

--- a/partials/home/footer.html
+++ b/partials/home/footer.html
@@ -1,16 +1,50 @@
 <div class="card-container bg-brand-primary-700 text-brand-light">
   <div class="card-container-inner">
-    <div class="flex flex-col items-center justify-between gap-6">
-      <div class="w-1/2 flex flex-col gap-4 items-center text-center justify-center mb-4">
-        <div class="badge-primary">Current Promotions</div>
-        <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
-        <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
-
-        <div class="flex flex-row gap-3 mt-2">
-          <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
-            View all offers
+    <div class="grid grid-cols-[40%_15%_15%_30%] gap-8">
+      <div>
+        <div class="flex flex-col gap-4 items-start justify-start mb-4 max-w-sm">
+          <a class="block text-brand-light w-20" href="#">
+            <span class="sr-only">Home</span>
+            <svg class="w-full h-auto" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M53.8648 0.58332C50.982 0.58332 48.2718 2.74559 46.6245 6.25488L35.7329 30H34.4376L26.9028 16.9749L20.9578 30H19.6625L4.65261 3.99656C3.003 1.15961 2.41402 0.58332 0.17773 0.58332C-0.0592433 0.58332 -0.0592433 0.0046853 0.17773 0.0046853C1.10568 0.00780884 2.55283 0.00780884 4.51917 0.0046853C9.70958 0.00234265 11.4213 0.0046853 13.0111 0.0046853C13.2458 0.0046853 13.2458 0.580978 13.0111 0.580978C9.774 0.580978 9.59684 1.30251 11.656 4.85866L22.2531 23.2204L25.9618 15.2881L19.4278 3.99422C18.1923 1.87881 17.0742 0.580978 15.6592 0.580978C15.4222 0.580978 15.4222 0.0046853 15.6592 0.0046853C16.8372 0.0046853 16.8579 0.0046853 19.3312 0.0046853C23.7462 0.0046853 25.1381 0.0046853 26.4334 0.0046853C26.6704 0.0046853 26.6704 0.580978 26.4334 0.580978C24.3145 0.580978 24.3743 1.30251 26.4334 4.85866L29.024 9.32844L30.4965 6.10729C32.2635 2.30985 32.2635 0.578635 30.3194 0.578635C30.0824 0.578635 30.0824 0.00234265 30.3194 0.00234265C31.4973 0.00234265 30.5839 0.00234265 34.1155 0.00234265C36.0573 0.00234265 36.9707 0.00234265 38.7377 0.00234265C38.9148 0.00234265 38.9148 0.578635 38.7377 0.578635C36.0895 0.578635 33.9683 2.4059 32.2036 6.2502L30.0249 11.0081L37.0903 23.1688L44.685 6.58519C46.2748 3.12276 44.9795 0.576292 42.0369 0.576292C41.7999 0.576292 41.7999 0 42.0369 0C44.096 0 45.6927 0 48.633 0C50.8118 0 51.8655 0 53.8671 0C54.0443 0 54.0443 0.576292 53.8671 0.576292L53.8648 0.58332Z" fill="var(--color-brand-light)"/>
+            </svg>
           </a>
+          <p class="text-sm">
+            The longest established aesthetics distribution company in the UK, Wigmore Medical has over 30 years of industry experience from medical equipment through to topical skincare. Originally a pharmacy specialising in medical equipment. Wigmore Medical has grown into the UK’s leading aesthetics medicine's one-stop-shop.
+          </p>
         </div>
+      </div>
+      <div>
+        <h3 class="heading-primary text-lg text-brand-light mb-8">About</h3>
+        <ul class="space-y-5">
+          <li><a href="#" class="text-brand-light hover:underline text-sm">About Us</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Our Story</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Careers</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Press</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Contact Us</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="heading-primary text-lg text-brand-light mb-8">More Info</h3>
+        <ul class="space-y-5">
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Delivery Information</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Returns Policy</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Terms & Conditions</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">Privacy Policy</a></li>
+          <li><a href="#" class="text-brand-light hover:underline text-sm">FAQs</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="heading-primary text-lg text-brand-light mb-8">Subscribe</h3>
+        <p class="text-sm">
+          Subscribe to our newsletter for exclusive offers, skincare tips, and the latest news
+        </p>
+        <a href="#" class="pr-2 pl-4 py-1.5 mt-6 flex items-center justify-between gap-3 text-sm border border-transparent bg-brand-light text-neutral-500 rounded-full hover:bg-brand-primary-100 transition-colors">
+          Email Address
+          <span class="w-9 h-9 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
+            <span class="icon icon-arrow w-3.5 h-3.5 rotate-180"></span>
+          </span>
+        </a>
       </div>
     </div>
   </div>
