--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -222,15 +222,21 @@
                     dropdown: true
                 },
                 {
-                    id: 'documentation',
-                    label: 'Documentation',
-                    url: '#documentation',
+                    id: 'exclusives',
+                    label: 'Exclusives',
+                    url: '#exclusives',
                     dropdown: false
                 },
                 {
-                    id: 'contact',
-                    label: 'Contact',
-                    url: '#contact',
+                    id: 'news',
+                    label: 'News',
+                    url: '#news',
+                    dropdown: false
+                },
+                {
+                    id: 'wigmore-presents',
+                    label: 'Wigmore Presents',
+                    url: '#wigmore-presents',
                     dropdown: false
                 },
             ],
