Fixing footer to use fr instead of % because of gap

--- a/partials/home/footer.html
+++ b/partials/home/footer.html
@@ -1,6 +1,6 @@
 <div class="card-container bg-brand-primary-700 text-brand-light">
   <div class="card-container-inner">
-    <div class="grid grid-cols-[40%_15%_15%_30%] gap-8">
+    <div class="grid grid-cols-[4fr_1.5fr_1.5fr_3fr] gap-8">
       <div>
         <div class="flex flex-col gap-4 items-start justify-start mb-4 max-w-sm">
           <a class="block text-brand-light w-20" href="#">
