--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -10,7 +10,7 @@
     <!-- Rounded block 1 -->
     <div
       :class="navigationMenuOpen ? 'rounded-t-3xl' : 'rounded-3xl'"
-      class="relative grow flex justify-between items-center px-5 py-2 gap-8 border-b border-neutral-200/80 bg-brand-light">
+      class="relative duration-200 grow flex justify-between items-center px-5 py-2 gap-8 border-b border-neutral-200/80 bg-brand-light">
       <a class="block text-teal-600" href="#">
         <span class="sr-only">Home</span>
         <svg width="54" height="30" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -64,14 +64,16 @@
         </div>
       </div>
 
+      <!-- Old animation if needed -->
+      <!-- x-transition:enter="transition ease-out duration-200"
+      x-transition:enter-start="opacity-0 -translate-y-2"
+      x-transition:enter-end="opacity-100 translate-y-0"
+      x-transition:leave="transition ease-in duration-150"
+      x-transition:leave-start="opacity-100 translate-y-0"
+      x-transition:leave-end="opacity-0 -translate-y-2" -->
+
       <!-- Dropdown (inside Rounded block 1, inherits width via CSS) -->
-      <div x-show="navigationMenuOpen"
-          x-transition:enter="transition ease-out duration-200"
-          x-transition:enter-start="opacity-0 -translate-y-2"
-          x-transition:enter-end="opacity-100 translate-y-0"
-          x-transition:leave="transition ease-in duration-150"
-          x-transition:leave-start="opacity-100 translate-y-0"
-          x-transition:leave-end="opacity-0 -translate-y-2"
+      <div x-show="navigationMenuOpen" x-collapse.duration.250ms
           @mouseenter="cancelClose()"
           @mouseleave="scheduleClose()"
           class="absolute top-full left-0 w-full bg-[#E5E5E5] rounded-b-3xl shadow-md z-50"
@@ -370,13 +372,16 @@
 
             openMenu(menuId) {
                 this.cancelClose();
-                this.navigationMenuOpen = true;
+                // Set content first so x-collapse can measure height
                 this.navigationMenu = menuId;
-                // Set first category as active by default
                 const dropdown = this.dropdownContent[menuId];
                 if (dropdown && dropdown.categories && dropdown.categories.length > 0) {
                     this.activeCategory = dropdown.categories[0].id;
                 }
+                // Show container on next tick to allow content to render
+                this.$nextTick(() => {
+                    this.navigationMenuOpen = true;
+                });
             },
 
             scheduleClose() {
@@ -394,8 +399,11 @@
 
             closeMenu() {
                 this.navigationMenuOpen = false;
-                this.navigationMenu = '';
-                this.activeCategory = '';
+                // Delay clearing content until after collapse animation completes
+                setTimeout(() => {
+                    this.navigationMenu = '';
+                    this.activeCategory = '';
+                }, 250);
             }
         }
     }
