--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -56,12 +56,64 @@
           </div>
         </nav>
 
-        <div class="flex items-center gap-2 px-4 py-2 w-56 bg-brand-background-secondary border border-brand-border rounded-full">
-          <svg xmlns="http://www.w3.org/2000/svg" class="size-4 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <!-- FIXME: -->
+        <div x-data="{ 
+            slideOverOpen: false 
+        }"
+        class="relative z-50 w-auto h-auto flex justify-center"
+        >
+        <button @click="slideOverOpen=true" class="cursor-pointer group flex items-center gap-2 px-4 py-2 w-56 bg-brand-background-secondary border border-brand-border hover:border-brand-primary-700 rounded-full">
+          <svg xmlns="http://www.w3.org/2000/svg" class="size-4 text-neutral-500 group-hover:text-brand-primary-700" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
           </svg>
-          <span class="text-sm text-neutral-500">Search</span>
+
+          <span class="text-sm text-neutral-500 group-hover:text-brand-dark">Search</span>
+        </button>
+        <template x-teleport="body">
+            <div 
+                x-show="slideOverOpen"
+                @keydown.window.escape="slideOverOpen=false"
+                class="relative z-99">
+                <div x-show="slideOverOpen" x-transition.opacity.duration.600ms @click="slideOverOpen = false" class="fixed inset-0 bg-black/10"></div>
+                <div class="overflow-hidden fixed inset-0">
+                    <div class="overflow-hidden absolute inset-0">
+                        <div class="flex fixed inset-y-0 right-0 pl-10 max-w-full">
+                            <div 
+                                x-show="slideOverOpen" 
+                                @click.away="slideOverOpen = false"
+                                x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700" 
+                                x-transition:enter-start="translate-x-full" 
+                                x-transition:enter-end="translate-x-0" 
+                                x-transition:leave="transform transition ease-in-out duration-500 sm:duration-700" 
+                                x-transition:leave-start="translate-x-0" 
+                                x-transition:leave-end="translate-x-full" 
+                                class="w-screen max-w-md">
+                                <div class="flex overflow-y-scroll flex-col py-5 h-full bg-white border-l shadow-lg border-neutral-100/70">
+                                    <div class="px-4 sm:px-5">
+                                        <div class="flex justify-between items-start pb-1">
+                                            <h2 class="text-base font-semibold leading-6 text-gray-900" id="slide-over-title">Slide Over Title</h2>
+                                            <div class="flex items-center ml-3 h-auto"> 
+                                                <button @click="slideOverOpen=false" class="flex absolute right-0 z-30 justify-center items-center px-3 py-2 mt-6 mr-5 space-x-1 text-xs font-medium uppercase rounded-md border border-neutral-200 text-neutral-600 hover:bg-neutral-100">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path></svg>
+                                                    <span>Close</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="relative flex-1 px-4 mt-5 sm:px-5">
+                                        <div class="absolute inset-0 px-4 sm:px-5">
+                                            <div class="overflow-hidden relative h-full rounded-md border border-dashed border-neutral-300"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </template>
         </div>
+        <!-- FIXME: -->
       </div>
 
       <!-- Dropdown (inside Rounded block 1, inherits width via CSS) -->
