--- a/partials/home/product-carousel.html
+++ b/partials/home/product-carousel.html
@@ -161,8 +161,8 @@
                           </button>
                         </div>
 
-                        <a href="#" class="px-6 py-2.5 mt-1 w-full flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors">
-                          View Offer
+                        <a href="#" class="button-primary w-full">
+                          View offer
                         </a>
                       </div>
                     </div>
