--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -234,11 +234,11 @@
     <!-- Rounded block 2 -->
     <div class="shrink-0 flex items-center gap-4 px-5 py-2 border-b border-neutral-200/80 bg-brand-light rounded-3xl">
       <div class="sm:flex sm:gap-2">
-        <a href="#" class="px-6 py-2.5 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
+        <a href="#" class="button-secondary">
           Sign in
         </a>
 
-        <a href="#" class="px-6 py-2.5 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors">
+        <a href="#" class="button-primary">
           Join Now
         </a>
       </div>
