--- a/app.css
+++ b/app.css
@@ -88,7 +88,78 @@
     @apply font-sans font-bold leading-normal;
   }
 
-  /* BUTTONS */
+  /* ----------------------- */
+  /* ------- BUTTONS ------- */
+  /* ----------------------- */
+
+  /* Button: primary (green) */
+  .button-primary {
+    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
+  }
+  .button-primary-icon {
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
+    
+    & > span {
+      @apply w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700;
+    }
+
+    & .icon-arrow {
+      @apply w-3 h-3 rotate-180;
+    }
+  }
+  /* Button: secondary (white) */
+  .button-secondary {
+    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+  }
+  .button-secondary-icon {
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+  
+    & > span {
+      @apply w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light;
+    }
+
+    & .icon-arrow {
+      @apply w-3 h-3 rotate-180;
+    }
+  }
+  /* Button: tertiary (white/green) */
+  .button-tertiary {
+    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+  }
+  .button-tertiary-icon {
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+  
+    & > span {
+      @apply w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light;
+    }
+
+    & .icon-arrow {
+      @apply w-3 h-3 rotate-180;
+    }
+  }
+  /* Button: transparent */
+  .button-transparent {
+    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
+  }
+  .button-transparent-icon {
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
+  
+    & > span {
+      @apply w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-dark;
+    }
+
+    & .icon-arrow {
+      @apply w-3 h-3 rotate-180;
+    }
+  }
+  /* Button: text + arrow */
+  .button-text-icon {
+    @apply inline-flex items-center mt-2 text-xs font-bold uppercase tracking-wide text-brand-primary-700 hover:underline transition-colors;
+
+    & .icon-arrow {
+      @apply w-2.5 h-2.5 rotate-180 ml-2;
+    }
+  }
 
   /* ICONS - colorable via text color */
   .icon-arrow {
