--- a/partials/home/hero.html
+++ b/partials/home/hero.html
@@ -32,21 +32,42 @@
                 <h1 class="heading-primary text-5xl text-brand-light">The UK’s Leading Aesthetic Distributor for Medical Professionals</h1>
                 <p class="text-brand-light max-w-xl text-lg">Discover our range of premium treatments designed to enhance your natural beauty with the latest techniques and technologies.</p>
                 <div class="flex flex-row gap-4 mt-2">
-                  <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors">
+                  <a href="#" class="button-primary">
                     Join Now
                   </a>
-                  <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors">
+                  <a href="#" class="button-primary-icon">
                     Join Now
-                    <span class="w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700">
-                      <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+                    <span>
+                      <span class="icon-arrow"></span>
                     </span>
                   </a>
-                  <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors">
+                  <a href="#" class="button-transparent">
                     Sign in
                   </a>
-                  <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
+                  <a href="#" class="button-transparent-icon">
+                    Sign in
+                    <span>
+                      <span class="icon-arrow"></span>
+                    </span>
+                  </a>
+                  <a href="#" class="button-secondary">
                     Sign in
                   </a>
+                  <a href="#" class="button-secondary-icon">
+                    Sign in
+                    <span>
+                      <span class="icon-arrow"></span>
+                    </span>
+                  </a>
+                  <!-- <a href="#" class="button-tertiary">
+                    Sign in
+                  </a>
+                  <a href="#" class="button-tertiary-icon">
+                    Sign in
+                    <span>
+                      <span class="icon-arrow"></span>
+                    </span>
+                  </a> -->
                 </div>
               </div>
             </div>
