--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -10,7 +10,7 @@
     <!-- Rounded block 1 -->
     <div
       :class="navigationMenuOpen ? 'rounded-t-3xl' : 'rounded-3xl'"
-      class="relative grow flex duration-200 justify-between items-center px-5 py-2 gap-8 border-b border-neutral-200/80 bg-brand-light">
+      class="relative grow flex duration-200 justify-between items-center px-5 py-2 gap-8 border border-brand-border bg-brand-light">
       <a class="block text-teal-600" href="#">
         <span class="sr-only">Home</span>
         <svg width="54" height="30" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -232,7 +232,7 @@
     </div>
 
     <!-- Rounded block 2 -->
-    <div class="shrink-0 flex items-center gap-4 px-5 py-2 border-b border-neutral-200/80 bg-brand-light rounded-3xl">
+    <div class="shrink-0 flex items-center gap-4 px-5 py-2 border border-brand-border bg-brand-light rounded-3xl">
       <div class="sm:flex sm:gap-2">
         <a href="#" class="button-secondary">
           Sign in
