--- a/partials/home/blog-carousel.html
+++ b/partials/home/blog-carousel.html
@@ -14,7 +14,7 @@
     <div class="flex flex-col items-center justify-between gap-6">
       <div class="max-w-lg flex flex-col gap-4 items-center text-center justify-center mb-4">
         <div class="badge-primary">Current Promotions</div>
-        <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
+        <h1 class="heading-primary md:text-4xl text-2xl">Our Latest Offers</h1>
         <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
 
         <div class="flex flex-row gap-3 mt-2">
@@ -53,16 +53,16 @@
           </button>
 
           <!-- Swiper Container -->
-          <div x-ref="swiper" class="swiper flex-1 overflow-hidden">
+          <div x-ref="swiper" class="swiper flex-1 overflow-hidden right-overflow-visible-lg">
             <div class="swiper-wrapper">
               <!-- Card 1 -->
               <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
-                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
+                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover">
                 </div>
                 <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
                   <div class="badge-primary">Face</div>
-                  <h1 class="heading-secondary text-base">How Excessive Product Layering Can Sabotage Your Skin</h1>
+                  <h1 class="heading-secondary md:text-base text-sm">How Excessive Product Layering Can Sabotage Your Skin</h1>
                   <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
                   <a href="#" class="button-text-icon">
                     <span>Read More</span>
@@ -73,11 +73,11 @@
               <!-- Card 2 -->
               <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
-                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
+                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover">
                 </div>
                 <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
                   <div class="badge-primary">Face</div>
-                  <h1 class="heading-secondary text-base">How Excessive Product Layering Can Sabotage Your Skin</h1>
+                  <h1 class="heading-secondary md:text-base text-sm">How Excessive Product Layering Can Sabotage Your Skin</h1>
                   <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
                   <a href="#" class="button-text-icon">
                     <span>Read More</span>
@@ -88,11 +88,11 @@
               <!-- Card 3 -->
               <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
-                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
+                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover">
                 </div>
                 <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
                   <div class="badge-primary">Face</div>
-                  <h1 class="heading-secondary text-base">How Excessive Product Layering Can Sabotage Your Skin</h1>
+                  <h1 class="heading-secondary md:text-base text-sm">How Excessive Product Layering Can Sabotage Your Skin</h1>
                   <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
                   <a href="#" class="button-text-icon">
                     <span>Read More</span>
@@ -103,11 +103,11 @@
               <!-- Card 4 -->
               <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
-                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
+                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover">
                 </div>
                 <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
                   <div class="badge-primary">Face</div>
-                  <h1 class="heading-secondary text-base">How Excessive Product Layering Can Sabotage Your Skin</h1>
+                  <h1 class="heading-secondary md:text-base text-sm">How Excessive Product Layering Can Sabotage Your Skin</h1>
                   <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
                   <a href="#" class="button-text-icon">
                     <span>Read More</span>
