--- a/partials/home/faq-section.html
+++ b/partials/home/faq-section.html
@@ -1,14 +1,14 @@
 <!-- SECTION: image text CTAs -->
 <div class="card-container bg-brand-light">
   <div class="card-container-inner">
-    <div class="flex flex-row justify-between gap-6">
-      <div class="w-1/2">
-        <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-9/10 object-cover rounded-3xl">
+    <div class="flex md:flex-row flex-col justify-between gap-6">
+      <div class="md:w-1/2">
+        <img src="/assets/placeholder-jennie.png" alt="" class="w-full md:aspect-9/10 aspect-5/4 object-cover rounded-2xl">
       </div>
-      <div class="w-1/2 flex flex-col gap-4 items-start justify-start">
+      <div class="md:w-1/2 flex flex-col gap-4 items-start justify-start">
         <!--  md:pl-12 -->
         <div class="badge-primary">Need More Information</div>
-        <h1 class="heading-primary text-4xl">
+        <h1 class="heading-primary md:text-4xl text-2xl">
           Frequently Asked Questions
         </h1>
         <div class="prose">
