--- a/partials/home/offer-carousel.html
+++ b/partials/home/offer-carousel.html
@@ -1,8 +1,8 @@
 <style>
   .offer-slide {
-    width: 280px;
+    width: 380px;
   }
-  @media (min-width: 1024px) {
+  @media (min-width: 1280px) {
     .offer-slide {
       width: auto;
     }
@@ -14,10 +14,10 @@
     <div class="flex flex-col items-center justify-between gap-6">
       <div class="max-w-lg flex flex-col gap-4 items-center text-center justify-center mb-4">
         <div class="badge-primary">Current Promotions</div>
-        <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
+        <h1 class="heading-primary md:text-4xl text-2xl">Our Latest Offers</h1>
         <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
 
-        <div class="flex flex-row gap-3 mt-2">
+        <div class="flex md:flex-row flex-col gap-3 mt-2 md:w-auto w-full">
           <a href="#" class="button-secondary">
             View all offers
           </a>
@@ -38,7 +38,7 @@
             prevEl: $refs.prev,
           },
           breakpoints: {
-            1024: {
+            1280: {
               slidesPerView: 3,
               spaceBetween: 24
             }
@@ -53,7 +53,7 @@
           </button>
 
           <!-- Swiper Container -->
-          <div x-ref="swiper" class="swiper flex-1 overflow-hidden">
+          <div x-ref="swiper" class="swiper flex-1 overflow-hidden right-overflow-visible-xl">
             <div class="swiper-wrapper">
               <!-- Card 1 -->
               <div class="swiper-slide offer-slide">
