--- a/partials/home/product-carousel.html
+++ b/partials/home/product-carousel.html
@@ -27,10 +27,10 @@
     <div class="flex flex-col items-center justify-between gap-6">
       <div class="max-w-lg flex flex-col gap-4 items-center text-center justify-center mb-4">
         <div class="badge-primary">Popular Products</div>
-        <h1 class="heading-primary text-4xl">Our Best Sellers</h1>
+        <h1 class="heading-primary md:text-4xl text-2xl">Our Best Sellers</h1>
         <p>Explore the most frequently ordered products by medical and aesthetic professionals using the Wigmore platform.</p>
 
-        <div class="flex flex-row gap-3 mt-2">
+        <div class="flex md:flex-row flex-col gap-3 mt-2 md:w-auto w-full">
           <span x-on:click="changeLoading()" href="#" class="cursor-pointer px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
             Trigger loading
           </span>
@@ -118,8 +118,8 @@
                               <span x-show="selected === 'option1'" class="w-2 h-2 rounded-full bg-brand-primary-700"></span>
                             </div>
                             <div class="text-left flex items-start flex-col">
-                              <span class="uppercase text-xxs font-bold mb-0.5">RX price</span>
-                              <span class="text-xs uppercase font-bold">£60.00</span>
+                              <span class="uppercase text-xxs font-bold">RX price</span>
+                              <span class="text-xs uppercase font-bold mt-1.5">£60.00</span>
                             </div>
                           </button>
                           <button
@@ -134,8 +134,8 @@
                               <span x-show="selected === 'option2'" class="w-2 h-2 rounded-full bg-brand-primary-700"></span>
                             </div>
                             <div class="text-left flex items-start flex-col">
-                              <span class="uppercase text-xxs font-bold mb-0.5">Stock Price</span>
-                              <span class="text-xs uppercase font-bold">£60.00</span>
+                              <span class="uppercase text-xxs font-bold">Stock Price</span>
+                              <span class="text-xs uppercase font-bold mt-1.5">£60.00</span>
                             </div>
                           </button>
                         </div>
