--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -10,7 +10,7 @@
     <!-- Rounded block 1 -->
     <div
       :class="navigationMenuOpen ? 'rounded-t-3xl' : 'rounded-3xl'"
-      class="relative grow flex duration-200 justify-between items-center px-5 py-2 gap-8 border border-brand-border bg-brand-light">
+      class="relative grow flex duration-200 justify-between items-center px-5 py-2.5 gap-8 border border-brand-border bg-brand-light">
       <a class="block text-teal-600" href="#">
         <span class="sr-only">Home</span>
         <svg width="54" height="30" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -18,7 +18,7 @@
         </svg>
       </a>
 
-      <div class="flex flex-row gap-4 w-full justify-between items-center">
+      <div class="flex-row gap-4 w-full justify-between items-center xl:flex hidden">
         <nav class="relative z-10">
           <div class="relative">
             <ul class="flex flex-1 justify-center items-center p-1 space-x-1 list-none text-neutral-700 group">
@@ -243,7 +243,7 @@
         </a>
       </div>
 
-      <button class="block rounded-sm bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 md:hidden">
+      <button class="block rounded-sm bg-white border border-brand-border p-2.5 text-neutral-500 transition xl:hidden">
         <span class="sr-only">Toggle menu</span>
         <svg xmlns="http://www.w3.org/2000/svg" class="size-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
