--- a/app.css
+++ b/app.css
@@ -40,7 +40,7 @@
     background-color: var(--color-brand-background);
     color: var(--color-brand-dark);
     font-size: var(--text-sm);
-    font-weight: var(--font-weight-normal);
+    font-weight: var(--font-weight-light);
     font-family: var(--font-sans);
     line-height: 1.3;
   }
@@ -57,6 +57,9 @@
   /* LAYOUT COMPONENTS */
   .card-container {
     @apply md:rounded-3xl rounded-xl mb-3 xl:py-16 xl:px-16 lg:py-8 lg:px-8 px-3 pt-5 pb-3 border border-brand-border;
+  }
+  .card-container-small {
+    @apply md:rounded-3xl rounded-xl mb-3 px-6 py-6 border border-brand-border;
   }
 
   .card-container-inner {
